--- a/Laboration 1/MyMovies.Dal/MyMovies.Dal.csproj
+++ b/Laboration 1/MyMovies.Dal/MyMovies.Dal.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor.cs" />
+    <Compile Include="Movie.cs" />
+    <Compile Include="MoviesContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
