--- a/Laboration 1/MyMovies.Dal/MyMovies.Dal.csproj
+++ b/Laboration 1/MyMovies.Dal/MyMovies.Dal.csproj
@@ -51,8 +51,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
+    <Compile Include="EntityConfigurations\ActorConfiguration.cs" />
+    <Compile Include="EntityConfigurations\MovieConfiguration.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MoviesContext.cs" />
+    <Compile Include="MoviesContextInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
