Added the first controller and view, and made sure the database is working as expected.

--- a/Laboration 1/MyMovies/Web.config
+++ b/Laboration 1/MyMovies/Web.config
@@ -40,4 +40,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add
+      name="MoviesContext"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
