Added missing files.

--- a/Laboration 2/Uppgift 1/MyMovies/Web.config
+++ b/Laboration 2/Uppgift 1/MyMovies/Web.config
@@ -40,4 +40,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="MoviesContext" connectionString="metadata=res://*/Models.MoviesModel.csdl|res://*/Models.MoviesModel.ssdl|res://*/Models.MoviesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Movies.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
