Complete refactor of data layer. Is now using ADO.NET (SqlConnection, SqlCommand and so on) instead of Entity Framework Database First.

--- a/Laboration 2/Uppgift 2/MyMovies/Web.config
+++ b/Laboration 2/Uppgift 2/MyMovies/Web.config
@@ -41,6 +41,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MoviesContext" connectionString="metadata=res://*/Models.MoviesModel.csdl|res://*/Models.MoviesModel.ssdl|res://*/Models.MoviesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Movies.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Movies" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True;" />
   </connectionStrings>
 </configuration>
