--- a/Laboration 2/Uppgift 2/MyMovies/MyMovies.csproj
+++ b/Laboration 2/Uppgift 2/MyMovies/MyMovies.csproj
@@ -101,25 +101,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Models\MoviesModel.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MoviesModel.edmx</DependentUpon>
-      <LastGenOutput>MoviesModel.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\MoviesModel.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>MoviesModel.edmx</DependentUpon>
-      <LastGenOutput>MoviesModel.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <EntityDeploy Include="Models\MoviesModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MoviesModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\MoviesModel.edmx.diagram">
-      <DependentUpon>MoviesModel.edmx</DependentUpon>
-    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -134,29 +117,17 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Genre.cs">
-      <DependentUpon>MoviesModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Movie.cs">
-      <DependentUpon>MoviesModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MoviesModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MoviesModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MoviesModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MoviesModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\MoviesModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MoviesModel.edmx</DependentUpon>
-    </Compile>
+    <Compile Include="Models\Genre.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\MovieViewModel.cs" />
+    <Compile Include="Repositories\CommandFactory.cs" />
+    <Compile Include="Repositories\GenreRepository.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\MovieRepository.cs" />
+    <Compile Include="ViewModels\DetailsMovieViewModel.cs" />
+    <Compile Include="ViewModels\EditMovieViewModel.cs" />
+    <Compile Include="ViewModels\IndexMovieViewModel.cs" />
+    <Compile Include="ViewModels\CreateMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
