--- a/Laboration 2/Uppgift 3/MyMovies/MyMovies.csproj
+++ b/Laboration 2/Uppgift 3/MyMovies/MyMovies.csproj
@@ -40,6 +40,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -130,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="AutoMapperConfiguration.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -159,6 +164,7 @@
     <Compile Include="ViewModels\CreateMovieViewModel.cs" />
     <Compile Include="ViewModels\DetailsMovieViewModel.cs" />
     <Compile Include="ViewModels\EditMovieViewModel.cs" />
+    <Compile Include="ViewModels\GenreSelectListFactory.cs" />
     <Compile Include="ViewModels\IndexMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
