Implemented stored procedure in database and updated Entity Framework model. Is using it from 'MoviesController'.

--- a/Laboration 2/Uppgift 3/MyMovies/MyMovies.csproj
+++ b/Laboration 2/Uppgift 3/MyMovies/MyMovies.csproj
@@ -145,6 +145,9 @@
     <Compile Include="Models\Movie.cs">
       <DependentUpon>MoviesModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MovieByGenre.cs">
+      <DependentUpon>MoviesModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\MoviesModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
