--- a/Laboration 2/Uppgift 4/PersonRegister/Web.config
+++ b/Laboration 2/Uppgift 4/PersonRegister/Web.config
@@ -40,4 +40,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="PersonRegistryEntities" connectionString="metadata=res://*/Models.PersonRegistryModel.csdl|res://*/Models.PersonRegistryModel.ssdl|res://*/Models.PersonRegistryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PersonRegistry.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
