--- a/Laboration 2/Uppgift 4/PersonRegistry/Views/web.config
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="PersonRegister" />
+        <add namespace="PersonRegistry" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
