--- a/Laboration 2/Uppgift 4/PersonRegistry/PersonRegistry.csproj
+++ b/Laboration 2/Uppgift 4/PersonRegistry/PersonRegistry.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PersonRegister</RootNamespace>
-    <AssemblyName>PersonRegister</AssemblyName>
+    <RootNamespace>PersonRegistry</RootNamespace>
+    <AssemblyName>PersonRegistry</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -151,6 +151,7 @@
       <DependentUpon>PersonRegistryModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\IndexPersonViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
