--- a/Laboration 2/Uppgift 4/PersonRegistry/Web.config
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Web.config
@@ -41,6 +41,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="PersonRegistryEntities" connectionString="metadata=res://*/Models.PersonRegistryModel.csdl|res://*/Models.PersonRegistryModel.ssdl|res://*/Models.PersonRegistryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PersonRegistry.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PersonRepositoryContext" connectionString="metadata=res://*/Models.PersonRegistryModel.csdl|res://*/Models.PersonRegistryModel.ssdl|res://*/Models.PersonRegistryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PersonRegistry.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
