--- a/Laboration 2/Uppgift 4/PersonRegistry/Web.config
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Web.config
@@ -42,5 +42,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="PersonRegistryContext" connectionString="metadata=res://*/Models.PersonRegistryModel.csdl|res://*/Models.PersonRegistryModel.ssdl|res://*/Models.PersonRegistryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PersonRegistry.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PetRegistryContext" connectionString="metadata=res://*/Models.PetRegistryModel.csdl|res://*/Models.PetRegistryModel.ssdl|res://*/Models.PetRegistryModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\PetRegistry.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
