--- a/Laboration 3/Subscribers/Web.config
+++ b/Laboration 3/Subscribers/Web.config
@@ -43,4 +43,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add
+      name="SubscriberContext"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Subscribers.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
