--- a/Laboration 3/Subscribers/Subscribers.csproj
+++ b/Laboration 3/Subscribers/Subscribers.csproj
@@ -106,6 +106,12 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Subscribers.Dto\Subscribers.Dto.csproj">
+      <Project>{e0fb671e-3271-4821-b4a8-5b5aa2c2372a}</Project>
+      <Name>Subscribers.Dto</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
