--- a/Laboration 3/Advertisements/Advertisements.csproj
+++ b/Laboration 3/Advertisements/Advertisements.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Models\AdvertisementContextInitializer.cs" />
     <Compile Include="Models\Advertiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CreateAdvertisementViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
