--- a/Laboration 3/Advertisements/Advertisements.csproj
+++ b/Laboration 3/Advertisements/Advertisements.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\Subscriber.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\AdvertisementViewModel.cs" />
     <Compile Include="ViewModels\CreateAdvertisementViewModel.cs" />
     <Compile Include="WebServices\Requests\Request.cs" />
     <Compile Include="WebServices\Requests\RequestException.cs" />
