Added a new EF model for the destination.

--- a/Project/TravelDiary/TravelDiary.csproj
+++ b/Project/TravelDiary/TravelDiary.csproj
@@ -176,6 +176,7 @@
     </Compile>
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationDbContextInitializer.cs" />
+    <Compile Include="Models\Destination.cs" />
     <Compile Include="Models\DiaryEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
