--- a/Project/TravelDiary/TravelDiary.csproj
+++ b/Project/TravelDiary/TravelDiary.csproj
@@ -169,7 +169,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Network\BingImage.cs" />
     <Compile Include="Controllers\Api\DiaryEntryController.cs" />
+    <Compile Include="Controllers\Api\PhotoSearchController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
